add a title to page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Profile page</title>
+    <title>Button Clicker</title>
   </head>
   <body>
     <!-- header and navbar -->
